Fix project, so it works without IntelliJ